# shrimp-farm

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
keypairs/: owner.json  test-authority.json  test-candymachine.json  test-collection.json  test-minter.json
programs/shrimp/: Cargo.toml
programs/shrimp/src/: account.rs  error.rs  helpers.rs  lib.rs  state.rs
programs/shrimp/src/instructions/: admin_mint.rs  buy_premarket.rs  buy_shrimp.rs  dev_withdraw.rs  end_premarket.rs  hatch_eggs.rs  initialize.rs  mint_nft.rs  mod.rs  register.rs  sell_eggs.rs  set_collection.rs  set_market.rs  set_minter.rs  set_program_guards.rs  testnet_bonus.rs  user_withdraw.rs
scripts/: init-mainnet.ts
tests/: constants.ts  nft.ts  shrimp.ts  utils.ts
