[package]
name = "shrimp"
version = "0.1.0"
edition = "2021"
description = "Created with Anchor"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "shrimp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"]}
solana-program = "1.18.26"
mpl-core = { version = "0.9.1", features = ["anchor"]}